--- a/blog/templates/blog_list.html
+++ b/blog/templates/blog_list.html
@@ -1,6 +1,7 @@
 {% extends 'control/base.html' %}
 {% load i18n %}
 {% block content %}
+        <h1>{% trans 'Blogs' %}</h1>
 <!DOCTYPE html>
 <html lang="en">
 
