--- a/courses/templates/page/success.html
+++ b/courses/templates/page/success.html
@@ -7,12 +7,12 @@
           <div class="col-md-12">
             <h4 class="my-3 text-center">
               <div class="alert alert-success py-3">
-                <h3 class="text-center">{% trans 'You Have Been Subscribe In Our Courses Wi Will Be with You Eny Time' %}</h3>
+                <h3 class="text-center">{% trans 'Your request has been sent successfully. We will contact you via email' %}</h3>
               </div>
             </h4>
           </div>
-          <a href="{% url 'my_path' %}" class="btn btn-success">
-            {% trans 'Show My path' %}
+          <a href="{% url 'main' %}" class="btn btn-success">
+            {% trans 'main page' %}
             </a>
         </div>
       </div>
