--- a/courses/templates/control/base.html
+++ b/courses/templates/control/base.html
@@ -9,10 +9,10 @@
 
         <!-- كود icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-<!--    <script defer src="{% static 'js/819.2ec26ef5.js' %}"></script>-->
-<!--    <script defer src="{% static 'js/app.0c66f515.js' %}"></script>-->
-<!--    <link href="{% static 'css/819.css' %}" rel="stylesheet">-->
-<!--    <link href="{% static 'css/app.css' %}" rel="stylesheet">-->
+    <script defer src="{% static 'js/819.2ec26ef5.js' %}"></script>
+    <script defer src="{% static 'js/app.0c66f515.js' %}"></script>
+    <link href="{% static 'css/819.css' %}" rel="stylesheet">
+    <link href="{% static 'css/app.css' %}" rel="stylesheet">
     <script src="https://js.stripe.com/v3/"></script>
     </head>
     <body class="d-flex flex-column h-100 bg-light">
