--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -13,7 +13,7 @@
                         {{ form }}
                             <div class="d-grid gap-2">
                         <button class="btn btn-success btn-block">
-                            {% trans 'login' %}
+                            {% trans 'register' %}
                         </button>
                     </form>
 
