--- a/courses/templates/page/course_view.html
+++ b/courses/templates/page/course_view.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{% trans 'Blog Details' %}</title>
+    <title>{% trans 'Course Details' %}</title>
     <meta charset="UTF-8">
     <style>
         h1 {
@@ -23,8 +23,16 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>{{ blog.title }}</h1>
-                <h2>{{ blog.body }}</h2>
+
+                <h1>{% trans 'title : ' %}{{ course.title }}</h1>
+                <h2>{% trans 'description : ' %}{{ course.description }}</h2>
+                <h2>{% trans 'price : ' %}{{ course.price }}</h2>
+
+            {% if course.id in subscriber %}
+              <button class="btn btn-success" disabled>{% trans 'Subscribed' %}</button>
+            {% else %}
+              <a href="{% url 'checkout' course.id %}" class="btn btn-primary">{% trans 'Subscribe' %}</a>
+            {% endif %}
             </div>
         </div>
     </div>
