--- a/courses/templates/page/main.html
+++ b/courses/templates/page/main.html
@@ -9,8 +9,10 @@
       <div class="card">
         <img src="{{ course.image.url }}" class="img-thumbnail" alt="...">
         <div class="card-body">
-          <h5 class="card-title">{% trans 'Course : ' %} {{ course.title }}</h5>
-          <p class="card-text">{% trans 'Price : ' %} ${{ course.price }}</p>
+          <a href="{% url 'course_view' course.id %}" style="color: purple; text-decoration: none; font-weight: bold;">
+            {% trans 'Course: ' %}: {{ course.title }}
+          </a>
+          <p class="card-text">{% trans 'Price: ' %} ${{ course.price }}</p>
           <div class="d-grid gap-2">
             {% if course.id in subscriber %}
               <button class="btn btn-success" disabled>{% trans 'Subscribed' %}</button>
