--- a/courses/templates/control/header.html
+++ b/courses/templates/control/header.html
@@ -13,7 +13,7 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="{% url 'main' %}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <img src="media/images.JPG" alt="Logo" width="70" height="70">
+        <img src="media/images.jpg" alt="Logo" width="70" height="70">
         <li><a href="{% url 'main' %}" class="nav-link px-2 text-secondary">{% trans 'Home' %}</a></li>
         <li><a href="{% url 'my_path' %}" class="nav-link px-2 text-white">{% trans 'my path' %}</a></li>
         <li><a href="{% url 'blog_list' %}" class="nav-link px-2 text-white">{% trans 'Blog' %}</a></li>
