--- a/courses/templates/page/main.html
+++ b/courses/templates/page/main.html
@@ -10,8 +10,9 @@
         <img src="{{ course.image.url }}" class="img-thumbnail" alt="...">
         <div class="card-body">
           <a href="{% url 'course_view' course.id %}" style="color: purple; text-decoration: none; font-weight: bold;">
-            {% trans 'Course: ' %}: {{ course.title }}
+            {% trans 'Course: ' %} {{ course.title }}
           </a>
+          {{ course.description }}
           <p class="card-text">{% trans 'Price: ' %} ${{ course.price }}</p>
           <div class="d-grid gap-2">
             {% if course.id in subscriber %}
