--- a/courses/templates/page/main.html
+++ b/courses/templates/page/main.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container mt-4">
   <div class="row">
-    {% for course in course %}
+    {% for course in courses %}
     <div class="col-md-4 mb-4">
       <div class="card">
         <img src="{{ course.image.url }}" class="img-thumbnail" alt="...">
