--- a/courses/templates/page/main.html
+++ b/courses/templates/page/main.html
@@ -8,9 +8,10 @@
     <div class="col-md-4 mb-4">
       <div class="card">
         <img src="{{ course.image.url }}" class="img-thumbnail" alt="...">
-        <div class="card-body">
-            {% trans 'Course: ' %} {{ course.title }}
-          </a>
+        <p class="card-text">
+                  <a href="{% url 'course_view' course.id %}" style="color:purple; text-decoration: none; font-weight: bold;">
+                    {{ course.title }} </a>
+                </p>
           <p class="card-text">{% trans 'Price: ' %} ${{ course.price }}</p>
           <div class="d-grid gap-2">
             {% if course.id in subscriber %}
