--- a/courses/templates/page/main.html
+++ b/courses/templates/page/main.html
@@ -9,17 +9,17 @@
       <div class="card">
         <img src="{{ course.image.url }}" class="img-thumbnail" alt="...">
         <p class="card-text">
-                  <a href="{% url 'course_view' course.id %}" style="color:purple; text-decoration: none; font-weight: bold;">
-                    {{ course.title }} </a>
-                </p>
-          <p class="card-text">{% trans 'Price: ' %} ${{ course.price }}</p>
-          <div class="d-grid gap-2">
-            {% if course.id in subscriber %}
-              <button class="btn btn-success" disabled>{% trans 'Subscribed' %}</button>
-            {% else %}
-              <a href="{% url 'checkout' course.id %}" class="btn btn-primary">{% trans 'Subscribe' %}</a>
-            {% endif %}
-          </div>
+          <a href="{% url 'course_view' course.id %}" style="color: purple; text-decoration: none; font-weight: bold;">
+            {{ course.title }}
+          </a>
+        </p>
+        <p class="card-text">{% trans 'Price: ' %} ${{ course.price }}</p>
+        <div class="d-grid gap-2">
+          {% if course.id in subscriber %}
+            <button class="btn btn-success" disabled>{% trans 'Subscribed' %}</button>
+          {% else %}
+            <a href="{% url 'checkout' course.id %}" class="btn btn-primary">{% trans 'Subscribe' %}</a>
+          {% endif %}
         </div>
       </div>
     </div>
