--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,29 +1,46 @@
-{% extends 'control/base.html' %}
 {% load i18n %}
 {% block content %}
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="card col-md-6 px-0">
-                <div class="card-header">
-                    <h3 class="mb-0 py-2"> {% trans 'login' %}</h3>
-                </div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
-                        {{ form }}
-                            <div class="d-grid gap-2">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css"
+    integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
+
+<!-- كود icons -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+<script src="https://js.stripe.com/v3/"></script>
+<div class="container">
+    <div class="row justify-content-md-center">
+        <div class="card col-md-6 px-0">
+            <div class="card-header">
+                <h3 class="mb-0 py-2">{% trans 'login' %}</h3>
+            </div>
+            <div class="card-body">
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form }}
+                    <div class="d-grid gap-2">
                         <button class="btn btn-success btn-block">
                             {% trans 'login' %}
                         </button>
-                    </form>
-
-                </div>
-
+                         <div class="d-grid gap-2">
+                             <a href="{% url 'register' %}" class="btn btn-warning btn-block">
+                        {% trans 'register' %}
+                        </a>
+                </form>
             </div>
-
         </div>
-
     </div>
+</div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+<style>
+    body {
+  background-color: Teal ; /* رمز اللون */
+}
+</style>
 
 {% endblock %}
