--- a/courses/templates/control/header.html
+++ b/courses/templates/control/header.html
@@ -21,18 +21,15 @@
 
               <!-- language_selector.html -->
 
-<pre class="code-block">
-  <form action="{% url 'change_language' language_code='ar' %}" method="post">
-    {% csrf_token %}
-    <label for="language-select">{% trans "Select Language" %}:</label>
-    <select name="language" id="language-select">
-      <option value="ar">{% trans "Arabic" %}</option>
-      <option value="en">{% trans "English" %}</option>
-      <!-- أضف المزيد من الخيارات اللغوية حسب الحاجة -->
-    </select>
-    <button type="submit">{% trans "Change Language" %}</button>
-  </form>
-</pre>
+
+            <form action="{% url 'change_language' language_code='en' %}" method="post">
+              <select name="language">
+                <option value="ar">{% Arabic %}</option>
+                <option value="en">{% English %}</option>
+              </select>
+              <input type="submit" value="{% trans 'Change Language' %}">
+            </form>
+
 
 
         </ul>
