--- a/courses/templates/control/header.html
+++ b/courses/templates/control/header.html
@@ -23,6 +23,7 @@
 
 
             <form action="{% url 'change_language' language_code='en' %}" method="post">
+                  {% csrf_token %}
               <select name="language">
                 <option value="ar">{% trans 'Arabic' %}</option>
                 <option value="en">{% trans 'English' %}</option>
