--- a/courses/templates/control/header.html
+++ b/courses/templates/control/header.html
@@ -22,14 +22,14 @@
               <!-- language_selector.html -->
 
 
-            <form action="{% url 'change_language' language_code='en' %}" method="post">
-                  {% csrf_token %}
-              <select name="language">
-                <option value="ar">{% trans 'Arabic' %}</option>
-                <option value="en">{% trans 'English' %}</option>
-              </select>
-              <input type="submit" value="{% trans 'Change Language' %}">
-            </form>
+           <form action="{% url 'change_language' %}" method="post">
+    {% csrf_token %}
+    <select name="language">
+        <option value="ar">{% trans 'Arabic' %}</option>
+        <option value="en">{% trans 'English' %}</option>
+    </select>
+    <input type="submit" value="{% trans 'Change Language' %}">
+</form>
 
 
 
