--- a/courses/templates/control/header.html
+++ b/courses/templates/control/header.html
@@ -21,17 +21,14 @@
 
               <!-- language_selector.html -->
 
-
-           <form action="{% url 'change_language' %}" method="post">
-    {% csrf_token %}
-    <select name="language">
-        <option value="ar">{% trans 'Arabic' %}</option>
-        <option value="en">{% trans 'English' %}</option>
-    </select>
-    <input type="submit" value="{% trans 'Change Language' %}">
+<form action="{% url 'change_language' %}" method="post">
+  {% csrf_token %}
+  <select name="language">
+    <option value="en">{% trans 'English' %}</option>
+    <option value="ar">{% trans 'Arabic' %}</option>
+  </select>
+  <button type="submit">{% trans 'change language' %}</button>
 </form>
-
-
 
         </ul>
 
