--- a/courses/templates/control/header.html
+++ b/courses/templates/control/header.html
@@ -24,10 +24,10 @@
 <form action="{% url 'change_language' %}" method="post">
   {% csrf_token %}
   <select name="language">
-    <option value="en" {% if request.session.django_language == 'en' %}selected{% endif %}>{% trans 'English' %}</option>
-    <option value="ar" {% if request.session.django_language == 'ar' %}selected{% endif %}>{% trans 'Arabic' %}</option>
+    <option value="en">{% trans 'English' %}</option>
+    <option value="ar">{% trans 'Arabic' %}</option>
   </select>
-  <button type="submit">{% trans 'Change Language' %}</button>
+  <button type="submit">{% trans 'change language' %}</button>
 </form>
 
         </ul>
