--- a/courses/templates/control/header.html
+++ b/courses/templates/control/header.html
@@ -32,7 +32,7 @@
           </option>
         {% endfor %}
      </select>
-     <input type="submit" value="Go">
+     <input type="submit" value="{% trans 'change language' %}">
  </form>
 
         </ul>
